# rental-kiosk-virtual-product-api

./: CONFIG_CHANGES.md  Dockerfile  LICENSE  PROTOCOL.md  README.md  main.py  pyproject.toml
examples/: golf.json  tennis.json
